tests/NormalTests/paczka1/fuzzy1/24868678.err
Error in line 4: kLf S656 41,4
Error in line 30: S656 S656 28,4
